# manager

./: .gitignore  Makefile  README.md  pyproject.toml
src/manager/: __init__.py
tests/: conftest.py  test_color.py  test_example_file.py  test_folder.py  test_merge.py  test_repo_text_file.py  test_repository.py  test_subproject.py  test_subproject_container.py  test_templating.py  test_tex_subproject.py  test_text_file.py  test_utils.py
tests/files/: double-dash-comments.lua  example-file.lua  luatex-manual_lua.tex  luatex-manual_preamble.tex  reference-links.lua  rewrap.lua  template.lua
